[project]
name = "mitsuki"
version = "0.1.0"
description = ""
authors = [
    {name = "Jarl",email = "sleepybluejune@proton.me"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml",
    "rich"
]

[tool.poetry]
packages = [{include = "mitsuki", from = "src"}]

[tool.poetry.scripts]
mitsuki = "mitsuki.mitsuki:cli"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
